[package]
name = "surimi"
version = "0.1.0"
authors = ["Alexandre Bouthinon <bouthinon.alexandre@gmail.com>"]
edition = "2018"

[dependencies]
async-tungstenite = { version = "0.15.0", features = ["async-std-runtime"] }
async-std = { version = "1.10.0", features = ["attributes"] }
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
serde_json = "1.0.68"

[dev-dependencies]
rusty-hook = "^0.11.2"